// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a header skeleton container 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 4px 8px 0 8px;
}

<div
  className="c0"
/>
`;

exports[`renders a header skeleton container differently when avatar is hidden 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px 8px 0 8px;
}

<div
  className="c0"
/>
`;
